--- a/static/reviewlizer/reviewlizerPvalues.html
+++ b/static/reviewlizer/reviewlizerPvalues.html
@@ -10,354 +10,116 @@
   </thead>
   <tbody>
     <tr>
-      <td>screen</td>
-      <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.045548</td>
-      <td>0.199620</td>
-      <td>2.031525</td>
+      <td>speed</td>
+      <td>Kia K5 2021 is better than Fiat 500 2021</td>
+      <td>0.004377</td>
+      <td>1.825122</td>
+      <td>0.137889</td>
     </tr>
     <tr>
-      <td>materials</td>
-      <td>Google Pixel 4A is better than xiaomi redmi note 9</td>
-      <td>0.062685</td>
-      <td>-0.133333</td>
-      <td>0.113540</td>
+      <td>speed</td>
+      <td>Kia K5 2021 is better than Toyota Camry 2021</td>
+      <td>0.005239</td>
+      <td>1.825122</td>
+      <td>0.111111</td>
     </tr>
     <tr>
-      <td>battery</td>
-      <td>iPhone 11 Pro is better than iPhone 12 Pro</td>
-      <td>0.066864</td>
-      <td>0.941527</td>
-      <td>-0.068878</td>
+      <td>speed</td>
+      <td>Kia K5 2021 is better than BMW 3 series 2021</td>
+      <td>0.011829</td>
+      <td>1.825122</td>
+      <td>0.033492</td>
     </tr>
     <tr>
-      <td>camera</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.068719</td>
-      <td>0.766367</td>
-      <td>4.097450</td>
-    </tr>
-    <tr>
-      <td>stabilization</td>
-      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
-      <td>0.081956</td>
-      <td>-0.001720</td>
-      <td>0.384767</td>
-    </tr>
-    <tr>
-      <td>camera</td>
-      <td>Google Pixel 5 is better than Samsung Galaxy s21</td>
-      <td>0.094436</td>
-      <td>1.237567</td>
-      <td>4.097450</td>
-    </tr>
-    <tr>
-      <td>camera</td>
-      <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.099691</td>
-      <td>1.298700</td>
-      <td>4.097450</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.099807</td>
-      <td>0.553944</td>
-      <td>2.031525</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>xiaomi redmi note 9 is better than iPhone 11 Pro</td>
-      <td>0.100789</td>
-      <td>0.199620</td>
-      <td>4.462173</td>
-    </tr>
-    <tr>
-      <td>stabilization</td>
-      <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.114814</td>
-      <td>-0.001720</td>
-      <td>1.006675</td>
-    </tr>
-    <tr>
-      <td>camera</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.122493</td>
-      <td>0.766367</td>
-      <td>3.488427</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>xiaomi redmi note 9 is better than iPhone 12 Pro</td>
-      <td>0.124061</td>
-      <td>0.553944</td>
-      <td>4.462173</td>
-    </tr>
-    <tr>
-      <td>materials</td>
-      <td>Google Pixel 4A is better than Google Pixel 5</td>
-      <td>0.133377</td>
-      <td>-0.083333</td>
-      <td>0.113540</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>Samsung Galaxy s21 is better than iPhone 11 Pro</td>
-      <td>0.135630</td>
-      <td>0.199620</td>
-      <td>2.243920</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>xiaomi redmi note 9 is better than Google Pixel 4A</td>
-      <td>0.150893</td>
-      <td>4.462173</td>
-      <td>0.895647</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>Google Pixel 5 is better than Google Pixel 4A</td>
-      <td>0.151107</td>
-      <td>2.031525</td>
-      <td>0.895647</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>Samsung Galaxy s21 is better than iPhone 12 Pro</td>
-      <td>0.161467</td>
+      <td>fun</td>
+      <td>Kia K5 2021 is better than Fiat 500 2021</td>
+      <td>0.059413</td>
+      <td>3.978189</td>
       <td>0.000000</td>
-      <td>1.469053</td>
     </tr>
     <tr>
-      <td>stabilization</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.164152</td>
-      <td>0.165989</td>
-      <td>1.006675</td>
+      <td>fun</td>
+      <td>Kia K5 2021 is better than Toyota Camry 2021</td>
+      <td>0.059413</td>
+      <td>3.978189</td>
+      <td>0.000000</td>
     </tr>
     <tr>
-      <td>battery</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.164174</td>
-      <td>-0.068878</td>
-      <td>2.290142</td>
+      <td>fun</td>
+      <td>Kia K5 2021 is better than BMW 3 series 2021</td>
+      <td>0.099337</td>
+      <td>3.978189</td>
+      <td>1.245125</td>
     </tr>
     <tr>
-      <td>camera</td>
-      <td>Google Pixel 4A is better than Samsung Galaxy s21</td>
-      <td>0.171343</td>
-      <td>1.237567</td>
-      <td>3.488427</td>
+      <td>suspension</td>
+      <td>BMW 3 series 2021 is better than Toyota Camry 2021</td>
+      <td>0.140888</td>
+      <td>0.000000</td>
+      <td>0.444467</td>
+    </tr>
+    <tr>
+      <td>interior</td>
+      <td>Kia K5 2021 is better than Fiat 500 2021</td>
+      <td>0.204939</td>
+      <td>7.728311</td>
+      <td>0.299956</td>
     </tr>
     <tr>
       <td>materials</td>
-      <td>Samsung Galaxy s21 is better than xiaomi redmi note 9</td>
-      <td>0.177808</td>
-      <td>-0.133333</td>
+      <td>Kia K5 2021 is better than Fiat 500 2021</td>
+      <td>0.212571</td>
+      <td>2.334589</td>
       <td>0.000000</td>
     </tr>
     <tr>
       <td>materials</td>
-      <td>iPhone 11 Pro is better than xiaomi redmi note 9</td>
-      <td>0.177808</td>
+      <td>Kia K5 2021 is better than Toyota Camry 2021</td>
+      <td>0.212571</td>
+      <td>2.334589</td>
       <td>0.000000</td>
-      <td>-0.133333</td>
+    </tr>
+    <tr>
+      <td>interior</td>
+      <td>Kia K5 2021 is better than Toyota Camry 2021</td>
+      <td>0.212913</td>
+      <td>7.728311</td>
+      <td>0.598544</td>
+    </tr>
+    <tr>
+      <td>interior</td>
+      <td>Kia K5 2021 is better than BMW 3 series 2021</td>
+      <td>0.215146</td>
+      <td>7.728311</td>
+      <td>0.573400</td>
     </tr>
     <tr>
       <td>materials</td>
-      <td>iPhone 12 Pro is better than xiaomi redmi note 9</td>
-      <td>0.177808</td>
+      <td>Kia K5 2021 is better than BMW 3 series 2021</td>
+      <td>0.216959</td>
+      <td>2.334589</td>
+      <td>0.034317</td>
+    </tr>
+    <tr>
+      <td>fun</td>
+      <td>BMW 3 series 2021 is better than Toyota Camry 2021</td>
+      <td>0.219712</td>
       <td>0.000000</td>
-      <td>-0.133333</td>
+      <td>1.245125</td>
     </tr>
     <tr>
-      <td>battery</td>
-      <td>iPhone 11 Pro is better than Samsung Galaxy s21</td>
-      <td>0.178280</td>
-      <td>0.941527</td>
-      <td>0.212360</td>
-    </tr>
-    <tr>
-      <td>camera</td>
-      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
-      <td>0.182230</td>
-      <td>1.298700</td>
-      <td>3.488427</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>Samsung Galaxy s21 is better than iPhone 11 Pro</td>
-      <td>0.183955</td>
-      <td>0.093460</td>
-      <td>1.469053</td>
-    </tr>
-    <tr>
-      <td>camera</td>
-      <td>Google Pixel 5 is better than xiaomi redmi note 9</td>
-      <td>0.195624</td>
-      <td>1.628920</td>
-      <td>4.097450</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.197856</td>
+      <td>fun</td>
+      <td>BMW 3 series 2021 is better than Fiat 500 2021</td>
+      <td>0.219712</td>
+      <td>1.245125</td>
       <td>0.000000</td>
-      <td>1.643992</td>
     </tr>
     <tr>
-      <td>screen</td>
-      <td>Samsung Galaxy s21 is better than iPhone 12 Pro</td>
-      <td>0.204966</td>
-      <td>0.553944</td>
-      <td>2.243920</td>
-    </tr>
-    <tr>
-      <td>battery</td>
-      <td>Google Pixel 5 is better than xiaomi redmi note 9</td>
-      <td>0.205810</td>
-      <td>0.182680</td>
-      <td>2.290142</td>
-    </tr>
-    <tr>
-      <td>battery</td>
-      <td>Google Pixel 5 is better than Samsung Galaxy s21</td>
-      <td>0.206060</td>
-      <td>0.212360</td>
-      <td>2.290142</td>
-    </tr>
-    <tr>
-      <td>stabilization</td>
-      <td>Google Pixel 5 is better than xiaomi redmi note 9</td>
-      <td>0.209780</td>
-      <td>0.260493</td>
-      <td>1.006675</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
-      <td>0.217633</td>
-      <td>0.199620</td>
-      <td>0.895647</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.217879</td>
-      <td>0.093460</td>
-      <td>1.643992</td>
-    </tr>
-    <tr>
-      <td>battery</td>
-      <td>iPhone 11 Pro is better than Google Pixel 4A</td>
-      <td>0.220288</td>
-      <td>0.941527</td>
-      <td>0.338220</td>
-    </tr>
-    <tr>
-      <td>battery</td>
-      <td>Google Pixel 5 is better than Google Pixel 4A</td>
-      <td>0.227949</td>
-      <td>2.290142</td>
-      <td>0.338220</td>
-    </tr>
-    <tr>
-      <td>materials</td>
-      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
-      <td>0.228274</td>
-      <td>0.000000</td>
-      <td>0.113540</td>
-    </tr>
-    <tr>
-      <td>materials</td>
-      <td>Google Pixel 4A is better than Samsung Galaxy s21</td>
-      <td>0.228274</td>
-      <td>0.000000</td>
-      <td>0.113540</td>
-    </tr>
-    <tr>
-      <td>materials</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.228274</td>
-      <td>0.000000</td>
-      <td>0.113540</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>xiaomi redmi note 9 is better than iPhone 12 Pro</td>
-      <td>0.241720</td>
-      <td>0.000000</td>
-      <td>0.944960</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>Samsung Galaxy s21 is better than Google Pixel 4A</td>
-      <td>0.258533</td>
-      <td>1.469053</td>
-      <td>0.274600</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>Google Pixel 5 is better than Google Pixel 4A</td>
-      <td>0.273469</td>
-      <td>1.643992</td>
-      <td>0.274600</td>
-    </tr>
-    <tr>
-      <td>stabilization</td>
-      <td>Google Pixel 5 is better than Google Pixel 4A</td>
-      <td>0.274201</td>
-      <td>1.006675</td>
-      <td>0.384767</td>
-    </tr>
-    <tr>
-      <td>stabilization</td>
-      <td>Samsung Galaxy s21 is better than iPhone 11 Pro</td>
-      <td>0.276394</td>
-      <td>-0.001720</td>
-      <td>0.377313</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>xiaomi redmi note 9 is better than iPhone 11 Pro</td>
-      <td>0.285264</td>
-      <td>0.093460</td>
-      <td>0.944960</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>Samsung Galaxy s21 is better than Google Pixel 4A</td>
-      <td>0.287098</td>
-      <td>2.243920</td>
-      <td>0.895647</td>
-    </tr>
-    <tr>
-      <td>battery</td>
-      <td>iPhone 11 Pro is better than xiaomi redmi note 9</td>
-      <td>0.290573</td>
-      <td>0.941527</td>
-      <td>0.182680</td>
-    </tr>
-    <tr>
-      <td>battery</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.292577</td>
-      <td>-0.068878</td>
-      <td>0.338220</td>
-    </tr>
-    <tr>
-      <td>stabilization</td>
-      <td>Google Pixel 5 is better than Samsung Galaxy s21</td>
-      <td>0.298920</td>
-      <td>0.377313</td>
-      <td>1.006675</td>
-    </tr>
-    <tr>
-      <td>stabilization</td>
-      <td>xiaomi redmi note 9 is better than iPhone 11 Pro</td>
-      <td>0.299504</td>
-      <td>-0.001720</td>
-      <td>0.260493</td>
+      <td>suspension</td>
+      <td>BMW 3 series 2021 is better than Fiat 500 2021</td>
+      <td>0.248399</td>
+      <td>0.444467</td>
+      <td>0.111111</td>
     </tr>
   </tbody>
 </table>
