adapting for Ubuntu

--- a/static/reviewlizer/reviewlizerPvalues.html
+++ b/static/reviewlizer/reviewlizerPvalues.html
@@ -10,116 +10,74 @@
   </thead>
   <tbody>
     <tr>
-      <td>speed</td>
-      <td>Kia K5 2021 is better than Fiat 500 2021</td>
-      <td>0.004377</td>
-      <td>1.825122</td>
-      <td>0.137889</td>
+      <td>price</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.069971</td>
+      <td>-0.080642</td>
+      <td>0.258667</td>
     </tr>
     <tr>
-      <td>speed</td>
-      <td>Kia K5 2021 is better than Toyota Camry 2021</td>
-      <td>0.005239</td>
-      <td>1.825122</td>
-      <td>0.111111</td>
+      <td>screen</td>
+      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
+      <td>0.113726</td>
+      <td>-0.005753</td>
+      <td>1.189127</td>
     </tr>
     <tr>
-      <td>speed</td>
-      <td>Kia K5 2021 is better than BMW 3 series 2021</td>
-      <td>0.011829</td>
-      <td>1.825122</td>
-      <td>0.033492</td>
+      <td>price</td>
+      <td>iPhone 11 Pro is better than iPhone 12 Pro</td>
+      <td>0.155420</td>
+      <td>0.860627</td>
+      <td>-0.080642</td>
     </tr>
     <tr>
-      <td>fun</td>
-      <td>Kia K5 2021 is better than Fiat 500 2021</td>
-      <td>0.059413</td>
-      <td>3.978189</td>
-      <td>0.000000</td>
+      <td>camera</td>
+      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
+      <td>0.162511</td>
+      <td>0.168000</td>
+      <td>1.706320</td>
     </tr>
     <tr>
-      <td>fun</td>
-      <td>Kia K5 2021 is better than Toyota Camry 2021</td>
-      <td>0.059413</td>
-      <td>3.978189</td>
-      <td>0.000000</td>
+      <td>screen</td>
+      <td>Google Pixel 5 is better than iPhone 11 Pro</td>
+      <td>0.169138</td>
+      <td>-0.005753</td>
+      <td>2.056413</td>
     </tr>
     <tr>
-      <td>fun</td>
-      <td>Kia K5 2021 is better than BMW 3 series 2021</td>
-      <td>0.099337</td>
-      <td>3.978189</td>
-      <td>1.245125</td>
+      <td>camera</td>
+      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
+      <td>0.245489</td>
+      <td>0.441820</td>
+      <td>1.706320</td>
     </tr>
     <tr>
-      <td>suspension</td>
-      <td>BMW 3 series 2021 is better than Toyota Camry 2021</td>
-      <td>0.140888</td>
-      <td>0.000000</td>
-      <td>0.444467</td>
+      <td>camera</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.257703</td>
+      <td>0.168000</td>
+      <td>1.380853</td>
     </tr>
     <tr>
-      <td>interior</td>
-      <td>Kia K5 2021 is better than Fiat 500 2021</td>
-      <td>0.204939</td>
-      <td>7.728311</td>
-      <td>0.299956</td>
+      <td>stabilization</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.284515</td>
+      <td>0.028200</td>
+      <td>0.420847</td>
     </tr>
     <tr>
-      <td>materials</td>
-      <td>Kia K5 2021 is better than Fiat 500 2021</td>
-      <td>0.212571</td>
-      <td>2.334589</td>
-      <td>0.000000</td>
+      <td>battery</td>
+      <td>Google Pixel 5 is better than iPhone 11 Pro</td>
+      <td>0.284805</td>
+      <td>0.394760</td>
+      <td>1.779260</td>
     </tr>
     <tr>
-      <td>materials</td>
-      <td>Kia K5 2021 is better than Toyota Camry 2021</td>
-      <td>0.212571</td>
-      <td>2.334589</td>
-      <td>0.000000</td>
-    </tr>
-    <tr>
-      <td>interior</td>
-      <td>Kia K5 2021 is better than Toyota Camry 2021</td>
-      <td>0.212913</td>
-      <td>7.728311</td>
-      <td>0.598544</td>
-    </tr>
-    <tr>
-      <td>interior</td>
-      <td>Kia K5 2021 is better than BMW 3 series 2021</td>
-      <td>0.215146</td>
-      <td>7.728311</td>
-      <td>0.573400</td>
-    </tr>
-    <tr>
-      <td>materials</td>
-      <td>Kia K5 2021 is better than BMW 3 series 2021</td>
-      <td>0.216959</td>
-      <td>2.334589</td>
-      <td>0.034317</td>
-    </tr>
-    <tr>
-      <td>fun</td>
-      <td>BMW 3 series 2021 is better than Toyota Camry 2021</td>
-      <td>0.219712</td>
-      <td>0.000000</td>
-      <td>1.245125</td>
-    </tr>
-    <tr>
-      <td>fun</td>
-      <td>BMW 3 series 2021 is better than Fiat 500 2021</td>
-      <td>0.219712</td>
-      <td>1.245125</td>
-      <td>0.000000</td>
-    </tr>
-    <tr>
-      <td>suspension</td>
-      <td>BMW 3 series 2021 is better than Fiat 500 2021</td>
-      <td>0.248399</td>
-      <td>0.444467</td>
-      <td>0.111111</td>
+      <td>stabilization</td>
+      <td>iPhone 11 Pro is better than iPhone 12 Pro</td>
+      <td>0.285768</td>
+      <td>0.254507</td>
+      <td>0.028200</td>
     </tr>
   </tbody>
 </table>
