Reviewlizer project bug fixing

--- a/static/reviewlizer/reviewlizerPvalues.html
+++ b/static/reviewlizer/reviewlizerPvalues.html
@@ -10,74 +10,74 @@
   </thead>
   <tbody>
     <tr>
-      <td>price</td>
+      <td>battery</td>
       <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.069971</td>
-      <td>-0.080642</td>
-      <td>0.258667</td>
+      <td>0.117070</td>
+      <td>0.000000</td>
+      <td>1.796147</td>
     </tr>
     <tr>
-      <td>screen</td>
-      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
-      <td>0.113726</td>
-      <td>-0.005753</td>
-      <td>1.189127</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>iPhone 11 Pro is better than iPhone 12 Pro</td>
-      <td>0.155420</td>
-      <td>0.860627</td>
-      <td>-0.080642</td>
+      <td>battery</td>
+      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
+      <td>0.136131</td>
+      <td>0.000000</td>
+      <td>0.494993</td>
     </tr>
     <tr>
       <td>camera</td>
       <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.162511</td>
-      <td>0.168000</td>
-      <td>1.706320</td>
+      <td>0.157472</td>
+      <td>0.045267</td>
+      <td>1.646500</td>
     </tr>
     <tr>
       <td>screen</td>
-      <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.169138</td>
-      <td>-0.005753</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.170068</td>
+      <td>0.000000</td>
       <td>2.056413</td>
     </tr>
     <tr>
-      <td>camera</td>
-      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
-      <td>0.245489</td>
-      <td>0.441820</td>
-      <td>1.706320</td>
+      <td>price</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.175965</td>
+      <td>0.000000</td>
+      <td>0.340313</td>
     </tr>
     <tr>
       <td>camera</td>
       <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.257703</td>
-      <td>0.168000</td>
+      <td>0.217795</td>
+      <td>0.045267</td>
       <td>1.380853</td>
     </tr>
     <tr>
+      <td>battery</td>
+      <td>Google Pixel 5 is better than Google Pixel 4A</td>
+      <td>0.228395</td>
+      <td>1.796147</td>
+      <td>0.494993</td>
+    </tr>
+    <tr>
+      <td>screen</td>
+      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
+      <td>0.245207</td>
+      <td>0.000000</td>
+      <td>0.826433</td>
+    </tr>
+    <tr>
       <td>stabilization</td>
       <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.284515</td>
-      <td>0.028200</td>
+      <td>0.255651</td>
+      <td>0.000000</td>
       <td>0.420847</td>
     </tr>
     <tr>
-      <td>battery</td>
-      <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.284805</td>
-      <td>0.394760</td>
-      <td>1.779260</td>
-    </tr>
-    <tr>
       <td>stabilization</td>
-      <td>iPhone 11 Pro is better than iPhone 12 Pro</td>
-      <td>0.285768</td>
-      <td>0.254507</td>
-      <td>0.028200</td>
+      <td>Google Pixel 5 is better than Google Pixel 4A</td>
+      <td>0.255651</td>
+      <td>0.420847</td>
+      <td>0.000000</td>
     </tr>
   </tbody>
 </table>
