--- a/static/reviewlizer/reviewlizerDf.html
+++ b/static/reviewlizer/reviewlizerDf.html
@@ -1,6 +1,7 @@
-<table border="1" class="dataframe">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<table class="table">
   <thead>
-    <tr style="text-align: right;">
+    <tr style="text-align: left;">
       <th></th>
       <th>image</th>
       <th>name</th>
@@ -16,18 +17,6 @@
   <tbody>
     <tr>
       <th>0</th>
-      <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/refurb-iphone-11-pro-gold-2019?wid=1144&hei=1144&fmt=jpeg&qlt=80&.v=1611101491000" width="200" ></td>
-      <td>iPhone 11 Pro</td>
-      <td>0.000000</td>
-      <td>-0.113333</td>
-      <td>0.9392</td>
-      <td>0.000000</td>
-      <td>0.0</td>
-      <td>1.813467</td>
-      <td>0.439889</td>
-    </tr>
-    <tr>
-      <th>1</th>
       <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-12-pro-family-hero?wid=940&hei=1112&fmt=jpeg&qlt=80&.v=1604021663000" width="200" ></td>
       <td>iPhone 12 Pro</td>
       <td>0.000000</td>
@@ -39,20 +28,20 @@
       <td>0.011239</td>
     </tr>
     <tr>
-      <th>2</th>
-      <td><img src="https://images-na.ssl-images-amazon.com/images/I/81-fNmQqlLL._AC_SX522_.jpg" width="200" ></td>
+      <th>1</th>
+      <td><img src="https://lh3.googleusercontent.com/acfYFwP4OteHL-i2vr0IPcmiLlaqsWqGU7_0KPgHfDiNHUCPOmDSmeb42ps7V4ganqdF6sLI7tnzY1tCy3-X=w830" width="200" ></td>
       <td>Google Pixel 5</td>
-      <td>0.000000</td>
-      <td>0.598300</td>
-      <td>0.0000</td>
-      <td>2.123867</td>
+      <td>6.688600</td>
+      <td>4.857300</td>
+      <td>0.0086</td>
+      <td>0.783467</td>
       <td>0.0</td>
-      <td>0.712167</td>
-      <td>0.572389</td>
+      <td>0.333333</td>
+      <td>2.111883</td>
     </tr>
     <tr>
-      <th>3</th>
-      <td><img src="https://images-na.ssl-images-amazon.com/images/I/615nnBCxt7S._AC_SX522_.jpg" width="200" ></td>
+      <th>2</th>
+      <td><img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6422/6422517_sd.jpg" width="200" ></td>
       <td>Google Pixel 4A</td>
       <td>2.666667</td>
       <td>1.146533</td>
