--- a/static/reviewlizer/reviewlizerPvalues.html
+++ b/static/reviewlizer/reviewlizerPvalues.html
@@ -1,6 +1,7 @@
-<table border="1" class="dataframe">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<meta http-Equiv="Cache-Control" Content="no-cache" /> <meta http-Equiv="Pragma" Content="no-cache" /> <meta http-Equiv="Expires" Content="0" /> <table class="table">
   <thead>
-    <tr style="text-align: right;">
+    <tr style="text-align: left;">
       <th>keyword</th>
       <th>result</th>
       <th>pvalue</th>
@@ -10,74 +11,67 @@
   </thead>
   <tbody>
     <tr>
-      <td>battery</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.117070</td>
-      <td>0.000000</td>
-      <td>1.796147</td>
+      <td>engine</td>
+      <td>motoguzzi v7 2021 is better than ktm duke 790 2021</td>
+      <td>0.021242</td>
+      <td>0.222007</td>
+      <td>2.004547</td>
     </tr>
     <tr>
-      <td>battery</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.136131</td>
-      <td>0.000000</td>
-      <td>0.494993</td>
-    </tr>
-    <tr>
-      <td>camera</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.157472</td>
-      <td>0.045267</td>
-      <td>1.646500</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.170068</td>
-      <td>0.000000</td>
-      <td>2.056413</td>
+      <td>engine</td>
+      <td>yamaha tracer 700 2021 is better than ktm duke 790 2021</td>
+      <td>0.089253</td>
+      <td>2.020820</td>
+      <td>0.222007</td>
     </tr>
     <tr>
       <td>price</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.175965</td>
+      <td>yamaha tracer 700 2021 is better than Husquarna svartpilen 701 2021</td>
+      <td>0.141537</td>
+      <td>-0.256047</td>
+      <td>0.266667</td>
+    </tr>
+    <tr>
+      <td>design</td>
+      <td>Husquarna svartpilen 701 2021 is better than ktm duke 790 2021</td>
+      <td>0.191611</td>
+      <td>0.753833</td>
       <td>0.000000</td>
-      <td>0.340313</td>
     </tr>
     <tr>
-      <td>camera</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.217795</td>
-      <td>0.045267</td>
-      <td>1.380853</td>
-    </tr>
-    <tr>
-      <td>battery</td>
-      <td>Google Pixel 5 is better than Google Pixel 4A</td>
-      <td>0.228395</td>
-      <td>1.796147</td>
-      <td>0.494993</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.245207</td>
+      <td>design</td>
+      <td>Husquarna svartpilen 701 2021 is better than motoguzzi v7 2021</td>
+      <td>0.191611</td>
+      <td>0.753833</td>
       <td>0.000000</td>
-      <td>0.826433</td>
     </tr>
     <tr>
-      <td>stabilization</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.255651</td>
+      <td>price</td>
+      <td>ktm duke 790 2021 is better than Husquarna svartpilen 701 2021</td>
+      <td>0.195403</td>
+      <td>-0.256047</td>
       <td>0.000000</td>
-      <td>0.420847</td>
     </tr>
     <tr>
-      <td>stabilization</td>
-      <td>Google Pixel 5 is better than Google Pixel 4A</td>
-      <td>0.255651</td>
-      <td>0.420847</td>
+      <td>engine</td>
+      <td>Husquarna svartpilen 701 2021 is better than ktm duke 790 2021</td>
+      <td>0.228047</td>
+      <td>1.246733</td>
+      <td>0.222007</td>
+    </tr>
+    <tr>
+      <td>speed</td>
+      <td>yamaha tracer 700 2021 is better than ktm duke 790 2021</td>
+      <td>0.228232</td>
+      <td>0.385080</td>
       <td>0.000000</td>
+    </tr>
+    <tr>
+      <td>cost</td>
+      <td>yamaha tracer 700 2021 is better than ktm duke 790 2021</td>
+      <td>0.231441</td>
+      <td>0.181787</td>
+      <td>-0.088413</td>
     </tr>
   </tbody>
 </table>
