formatting updated in some projects

--- a/static/reviewlyzer/reviewlyzerPvalues.html
+++ b/static/reviewlyzer/reviewlyzerPvalues.html
@@ -11,88 +11,109 @@
   </thead>
   <tbody>
     <tr>
-      <td>battery</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.065242</td>
-      <td>0.000000</td>
-      <td>0.136005</td>
-    </tr>
-    <tr>
       <td>screen</td>
-      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
-      <td>0.173877</td>
-      <td>-0.002786</td>
-      <td>0.123458</td>
+      <td>Samsung galaxy s10 is better than iPhone 11 Pro</td>
+      <td>0.099671</td>
+      <td>-0.002214</td>
+      <td>0.050382</td>
     </tr>
     <tr>
       <td>battery</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.176493</td>
-      <td>0.000000</td>
-      <td>0.113670</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.161838</td>
+      <td>-0.023498</td>
+      <td>0.202102</td>
     </tr>
     <tr>
-      <td>screen</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.181458</td>
-      <td>0.000000</td>
-      <td>0.123458</td>
+      <td>battery</td>
+      <td>Samsung galaxy s10 is better than iPhone 12 Pro</td>
+      <td>0.163065</td>
+      <td>-0.023498</td>
+      <td>0.046187</td>
     </tr>
     <tr>
       <td>price</td>
-      <td>iPhone 11 Pro is better than iPhone 12 Pro</td>
-      <td>0.188569</td>
-      <td>0.171415</td>
+      <td>Google Pixel 5 is better than Samsung galaxy s10</td>
+      <td>0.163903</td>
+      <td>0.077181</td>
+      <td>0.014574</td>
+    </tr>
+    <tr>
+      <td>stabilization</td>
+      <td>Google Pixel 5 is better than Samsung galaxy s10</td>
+      <td>0.171465</td>
+      <td>0.044568</td>
       <td>0.000000</td>
     </tr>
     <tr>
-      <td>camera</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.198556</td>
-      <td>0.024839</td>
-      <td>0.249189</td>
+      <td>stabilization</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.171465</td>
+      <td>0.000000</td>
+      <td>0.044568</td>
+    </tr>
+    <tr>
+      <td>price</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.199550</td>
+      <td>0.020093</td>
+      <td>0.077181</td>
     </tr>
     <tr>
       <td>screen</td>
       <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.202331</td>
-      <td>-0.002786</td>
-      <td>0.254250</td>
+      <td>0.201914</td>
+      <td>-0.002214</td>
+      <td>0.244945</td>
+    </tr>
+    <tr>
+      <td>camera</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.217244</td>
+      <td>0.028248</td>
+      <td>0.217534</td>
+    </tr>
+    <tr>
+      <td>screen</td>
+      <td>Samsung galaxy s10 is better than iPhone 12 Pro</td>
+      <td>0.222760</td>
+      <td>0.012673</td>
+      <td>0.050382</td>
     </tr>
     <tr>
       <td>screen</td>
       <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.206303</td>
-      <td>0.000000</td>
-      <td>0.254250</td>
-    </tr>
-    <tr>
-      <td>camera</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.221651</td>
-      <td>0.024839</td>
-      <td>0.231115</td>
+      <td>0.225402</td>
+      <td>0.012673</td>
+      <td>0.244945</td>
     </tr>
     <tr>
       <td>price</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.263032</td>
-      <td>0.000000</td>
-      <td>0.059011</td>
+      <td>iPhone 11 Pro is better than Samsung galaxy s10</td>
+      <td>0.225659</td>
+      <td>0.163918</td>
+      <td>0.014574</td>
     </tr>
     <tr>
-      <td>camera</td>
+      <td>price</td>
       <td>iPhone 11 Pro is better than iPhone 12 Pro</td>
-      <td>0.272303</td>
-      <td>0.139682</td>
-      <td>0.024839</td>
+      <td>0.240485</td>
+      <td>0.163918</td>
+      <td>0.020093</td>
     </tr>
     <tr>
-      <td>price</td>
-      <td>iPhone 11 Pro is better than Google Pixel 4A</td>
-      <td>0.284696</td>
-      <td>0.171415</td>
-      <td>0.013619</td>
+      <td>stabilization</td>
+      <td>Google Pixel 5 is better than iPhone 11 Pro</td>
+      <td>0.292903</td>
+      <td>0.010825</td>
+      <td>0.044568</td>
+    </tr>
+    <tr>
+      <td>screen</td>
+      <td>Google Pixel 5 is better than Samsung galaxy s10</td>
+      <td>0.298222</td>
+      <td>0.244945</td>
+      <td>0.050382</td>
     </tr>
   </tbody>
 </table>
