--- a/static/reviewlyzer/reviewlyzerDf.html
+++ b/static/reviewlyzer/reviewlyzerDf.html
@@ -19,49 +19,49 @@
       <th>0</th>
       <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/refurb-iphone-11-pro-gold-2019?wid=1144&hei=1144&fmt=jpeg&qlt=80&.v=1611101491000" width="200" ></td>
       <td>iPhone 11 Pro</td>
-      <td>0.114089</td>
-      <td>0.139682</td>
+      <td>0.059819</td>
+      <td>0.121758</td>
       <td>0.0</td>
-      <td>0.171415</td>
-      <td>-0.002786</td>
+      <td>0.163918</td>
+      <td>-0.002214</td>
       <td>0.010825</td>
-      <td>0.072204</td>
+      <td>0.059018</td>
     </tr>
     <tr>
       <th>1</th>
       <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-12-pro-family-hero?wid=940&hei=1112&fmt=jpeg&qlt=80&.v=1604021663000" width="200" ></td>
       <td>iPhone 12 Pro</td>
+      <td>-0.023498</td>
+      <td>0.028248</td>
       <td>0.0</td>
-      <td>0.024839</td>
+      <td>0.020093</td>
+      <td>0.012673</td>
       <td>0.0</td>
-      <td>0.0</td>
-      <td>0.0</td>
-      <td>0.0</td>
-      <td>0.004140</td>
+      <td>0.006253</td>
     </tr>
     <tr>
       <th>2</th>
-      <td><img src="https://lh3.googleusercontent.com/acfYFwP4OteHL-i2vr0IPcmiLlaqsWqGU7_0KPgHfDiNHUCPOmDSmeb42ps7V4ganqdF6sLI7tnzY1tCy3-X=w830" width="200" ></td>
+      <td><img src="https://m.media-amazon.com/images/I/81-fNmQqlLL._AC_SX522_.jpg" width="200" ></td>
       <td>Google Pixel 5</td>
-      <td>0.136005</td>
-      <td>0.231115</td>
+      <td>0.202102</td>
+      <td>0.217534</td>
       <td>0.0</td>
-      <td>0.059011</td>
-      <td>0.25425</td>
-      <td>0.030124</td>
-      <td>0.118418</td>
+      <td>0.077181</td>
+      <td>0.244945</td>
+      <td>0.044568</td>
+      <td>0.131055</td>
     </tr>
     <tr>
       <th>3</th>
-      <td><img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6422/6422517_sd.jpg" width="200" ></td>
-      <td>Google Pixel 4A</td>
-      <td>0.11367</td>
-      <td>0.249189</td>
-      <td>0.010825</td>
-      <td>0.013619</td>
-      <td>0.123458</td>
-      <td>0.070467</td>
-      <td>0.096871</td>
+      <td><img src="https://m.media-amazon.com/images/I/618FTkMHQ3L._AC_SX522_.jpg" width="200" ></td>
+      <td>Samsung galaxy s10</td>
+      <td>0.046187</td>
+      <td>0.167444</td>
+      <td>0.046992</td>
+      <td>0.014574</td>
+      <td>0.050382</td>
+      <td>0.0</td>
+      <td>0.054263</td>
     </tr>
   </tbody>
 </table>
