--- a/static/reviewlyzer/reviewlyzerDf.html
+++ b/static/reviewlyzer/reviewlyzerDf.html
@@ -17,51 +17,51 @@
   <tbody>
     <tr>
       <th>0</th>
-      <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/refurb-iphone-11-pro-gold-2019?wid=1144&hei=1144&fmt=jpeg&qlt=80&.v=1611101491000" width="200" ></td>
+      <td><img src="https://www.apple.com/newsroom/images/product/iphone/standard/Apple_iPhone-11-Pro_Matte-Glass-Back_091019_big.jpg.large.jpg" width="200" ></td>
       <td>iPhone 11 Pro</td>
-      <td>0.059819</td>
-      <td>0.121758</td>
+      <td>0.114089</td>
+      <td>0.139682</td>
       <td>0.0</td>
-      <td>0.163918</td>
-      <td>-0.002214</td>
+      <td>0.171415</td>
+      <td>-0.002786</td>
       <td>0.010825</td>
-      <td>0.059018</td>
+      <td>0.072204</td>
     </tr>
     <tr>
       <th>1</th>
       <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-12-pro-family-hero?wid=940&hei=1112&fmt=jpeg&qlt=80&.v=1604021663000" width="200" ></td>
       <td>iPhone 12 Pro</td>
-      <td>-0.023498</td>
-      <td>0.028248</td>
       <td>0.0</td>
-      <td>0.020093</td>
-      <td>0.012673</td>
+      <td>0.055891</td>
       <td>0.0</td>
-      <td>0.006253</td>
+      <td>0.0</td>
+      <td>0.122068</td>
+      <td>0.010923</td>
+      <td>0.031480</td>
     </tr>
     <tr>
       <th>2</th>
-      <td><img src="https://m.media-amazon.com/images/I/81-fNmQqlLL._AC_SX522_.jpg" width="200" ></td>
+      <td><img src="https://lh3.googleusercontent.com/acfYFwP4OteHL-i2vr0IPcmiLlaqsWqGU7_0KPgHfDiNHUCPOmDSmeb42ps7V4ganqdF6sLI7tnzY1tCy3-X=w830" width="200" ></td>
       <td>Google Pixel 5</td>
-      <td>0.202102</td>
-      <td>0.217534</td>
+      <td>0.270315</td>
+      <td>0.263486</td>
       <td>0.0</td>
-      <td>0.077181</td>
-      <td>0.244945</td>
-      <td>0.044568</td>
-      <td>0.131055</td>
+      <td>0.060881</td>
+      <td>0.279291</td>
+      <td>0.052608</td>
+      <td>0.154430</td>
     </tr>
     <tr>
       <th>3</th>
-      <td><img src="https://m.media-amazon.com/images/I/618FTkMHQ3L._AC_SX522_.jpg" width="200" ></td>
-      <td>Samsung galaxy s10</td>
-      <td>0.046187</td>
-      <td>0.167444</td>
-      <td>0.046992</td>
-      <td>0.014574</td>
-      <td>0.050382</td>
-      <td>0.0</td>
-      <td>0.054263</td>
+      <td><img src="https://m.media-amazon.com/images/I/615nnBCxt7S._AC_SX522_.jpg" width="200" ></td>
+      <td>Google Pixel 4A</td>
+      <td>0.134308</td>
+      <td>0.249189</td>
+      <td>0.021648</td>
+      <td>-0.065768</td>
+      <td>0.114063</td>
+      <td>0.037037</td>
+      <td>0.081746</td>
     </tr>
   </tbody>
 </table>
