--- a/static/reviewlyzer/reviewlyzerPvalues.html
+++ b/static/reviewlyzer/reviewlyzerPvalues.html
@@ -11,109 +11,95 @@
   </thead>
   <tbody>
     <tr>
-      <td>screen</td>
-      <td>Samsung galaxy s10 is better than iPhone 11 Pro</td>
-      <td>0.099671</td>
-      <td>-0.002214</td>
-      <td>0.050382</td>
+      <td>price</td>
+      <td>Google Pixel 5 is better than Google Pixel 4A</td>
+      <td>0.031346</td>
+      <td>0.060881</td>
+      <td>-0.065768</td>
     </tr>
     <tr>
       <td>battery</td>
       <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.161838</td>
-      <td>-0.023498</td>
-      <td>0.202102</td>
-    </tr>
-    <tr>
-      <td>battery</td>
-      <td>Samsung galaxy s10 is better than iPhone 12 Pro</td>
-      <td>0.163065</td>
-      <td>-0.023498</td>
-      <td>0.046187</td>
+      <td>0.080148</td>
+      <td>0.000000</td>
+      <td>0.270315</td>
     </tr>
     <tr>
       <td>price</td>
-      <td>Google Pixel 5 is better than Samsung galaxy s10</td>
-      <td>0.163903</td>
-      <td>0.077181</td>
-      <td>0.014574</td>
-    </tr>
-    <tr>
-      <td>stabilization</td>
-      <td>Google Pixel 5 is better than Samsung galaxy s10</td>
-      <td>0.171465</td>
-      <td>0.044568</td>
-      <td>0.000000</td>
-    </tr>
-    <tr>
-      <td>stabilization</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.171465</td>
-      <td>0.000000</td>
-      <td>0.044568</td>
+      <td>iPhone 11 Pro is better than Google Pixel 4A</td>
+      <td>0.093870</td>
+      <td>0.171415</td>
+      <td>-0.065768</td>
     </tr>
     <tr>
       <td>price</td>
       <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.199550</td>
-      <td>0.020093</td>
-      <td>0.077181</td>
+      <td>0.113941</td>
+      <td>0.000000</td>
+      <td>0.060881</td>
+    </tr>
+    <tr>
+      <td>price</td>
+      <td>iPhone 12 Pro is better than Google Pixel 4A</td>
+      <td>0.154411</td>
+      <td>0.000000</td>
+      <td>-0.065768</td>
     </tr>
     <tr>
       <td>screen</td>
       <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.201914</td>
-      <td>-0.002214</td>
-      <td>0.244945</td>
-    </tr>
-    <tr>
-      <td>camera</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.217244</td>
-      <td>0.028248</td>
-      <td>0.217534</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>Samsung galaxy s10 is better than iPhone 12 Pro</td>
-      <td>0.222760</td>
-      <td>0.012673</td>
-      <td>0.050382</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.225402</td>
-      <td>0.012673</td>
-      <td>0.244945</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>iPhone 11 Pro is better than Samsung galaxy s10</td>
-      <td>0.225659</td>
-      <td>0.163918</td>
-      <td>0.014574</td>
+      <td>0.166509</td>
+      <td>-0.002786</td>
+      <td>0.279291</td>
     </tr>
     <tr>
       <td>price</td>
       <td>iPhone 11 Pro is better than iPhone 12 Pro</td>
-      <td>0.240485</td>
-      <td>0.163918</td>
-      <td>0.020093</td>
+      <td>0.188569</td>
+      <td>0.171415</td>
+      <td>0.000000</td>
+    </tr>
+    <tr>
+      <td>screen</td>
+      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
+      <td>0.204161</td>
+      <td>-0.002786</td>
+      <td>0.114063</td>
+    </tr>
+    <tr>
+      <td>camera</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.224732</td>
+      <td>0.055891</td>
+      <td>0.263486</td>
+    </tr>
+    <tr>
+      <td>battery</td>
+      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
+      <td>0.231427</td>
+      <td>0.000000</td>
+      <td>0.134308</td>
+    </tr>
+    <tr>
+      <td>camera</td>
+      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
+      <td>0.255786</td>
+      <td>0.055891</td>
+      <td>0.249189</td>
     </tr>
     <tr>
       <td>stabilization</td>
       <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.292903</td>
+      <td>0.270005</td>
       <td>0.010825</td>
-      <td>0.044568</td>
+      <td>0.052608</td>
     </tr>
     <tr>
-      <td>screen</td>
-      <td>Google Pixel 5 is better than Samsung galaxy s10</td>
-      <td>0.298222</td>
-      <td>0.244945</td>
-      <td>0.050382</td>
+      <td>stabilization</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.271215</td>
+      <td>0.010923</td>
+      <td>0.052608</td>
     </tr>
   </tbody>
 </table>
