added bash script for large files handling. Git lfs is not working

--- a/static/reviewlyzer/reviewlyzerDf.html
+++ b/static/reviewlyzer/reviewlyzerDf.html
@@ -17,51 +17,51 @@
   <tbody>
     <tr>
       <th>0</th>
-      <td><img src="https://www.apple.com/newsroom/images/product/iphone/standard/Apple_iPhone-11-Pro_Matte-Glass-Back_091019_big.jpg.large.jpg" width="200" ></td>
+      <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/refurb-iphone-11-pro-gold-2019?wid=1144&hei=1144&fmt=jpeg&qlt=80&.v=1611101491000" width="200" ></td>
       <td>iPhone 11 Pro</td>
-      <td>0.114089</td>
-      <td>0.139682</td>
+      <td>0.076448</td>
+      <td>0.106653</td>
       <td>0.0</td>
-      <td>0.171415</td>
-      <td>-0.002786</td>
+      <td>0.068908</td>
+      <td>0.0</td>
       <td>0.010825</td>
-      <td>0.072204</td>
+      <td>0.043806</td>
     </tr>
     <tr>
       <th>1</th>
       <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-12-pro-family-hero?wid=940&hei=1112&fmt=jpeg&qlt=80&.v=1604021663000" width="200" ></td>
       <td>iPhone 12 Pro</td>
       <td>0.0</td>
-      <td>0.055891</td>
+      <td>0.071262</td>
       <td>0.0</td>
       <td>0.0</td>
       <td>0.122068</td>
       <td>0.010923</td>
-      <td>0.031480</td>
+      <td>0.034042</td>
     </tr>
     <tr>
       <th>2</th>
       <td><img src="https://lh3.googleusercontent.com/acfYFwP4OteHL-i2vr0IPcmiLlaqsWqGU7_0KPgHfDiNHUCPOmDSmeb42ps7V4ganqdF6sLI7tnzY1tCy3-X=w830" width="200" ></td>
       <td>Google Pixel 5</td>
-      <td>0.270315</td>
-      <td>0.263486</td>
+      <td>0.21575</td>
+      <td>0.26817</td>
       <td>0.0</td>
-      <td>0.060881</td>
+      <td>0.103999</td>
       <td>0.279291</td>
-      <td>0.052608</td>
-      <td>0.154430</td>
+      <td>0.045959</td>
+      <td>0.152195</td>
     </tr>
     <tr>
       <th>3</th>
-      <td><img src="https://m.media-amazon.com/images/I/615nnBCxt7S._AC_SX522_.jpg" width="200" ></td>
+      <td><img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6422/6422517_sd.jpg" width="200" ></td>
       <td>Google Pixel 4A</td>
-      <td>0.134308</td>
-      <td>0.249189</td>
-      <td>0.021648</td>
-      <td>-0.065768</td>
-      <td>0.114063</td>
-      <td>0.037037</td>
-      <td>0.081746</td>
+      <td>0.089491</td>
+      <td>0.300823</td>
+      <td>0.010825</td>
+      <td>0.00555</td>
+      <td>0.156244</td>
+      <td>0.0</td>
+      <td>0.093822</td>
     </tr>
   </tbody>
 </table>
