--- a/static/reviewlyzer/reviewlyzerPvalues.html
+++ b/static/reviewlyzer/reviewlyzerPvalues.html
@@ -11,95 +11,81 @@
   </thead>
   <tbody>
     <tr>
+      <td>screen</td>
+      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
+      <td>0.084748</td>
+      <td>0.000000</td>
+      <td>0.156244</td>
+    </tr>
+    <tr>
       <td>price</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.098785</td>
+      <td>0.000000</td>
+      <td>0.103999</td>
+    </tr>
+    <tr>
+      <td>camera</td>
+      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
+      <td>0.165324</td>
+      <td>0.071262</td>
+      <td>0.300823</td>
+    </tr>
+    <tr>
+      <td>stabilization</td>
       <td>Google Pixel 5 is better than Google Pixel 4A</td>
-      <td>0.031346</td>
-      <td>0.060881</td>
-      <td>-0.065768</td>
-    </tr>
-    <tr>
-      <td>battery</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.080148</td>
+      <td>0.167629</td>
+      <td>0.045959</td>
       <td>0.000000</td>
-      <td>0.270315</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>iPhone 11 Pro is better than Google Pixel 4A</td>
-      <td>0.093870</td>
-      <td>0.171415</td>
-      <td>-0.065768</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.113941</td>
-      <td>0.000000</td>
-      <td>0.060881</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>iPhone 12 Pro is better than Google Pixel 4A</td>
-      <td>0.154411</td>
-      <td>0.000000</td>
-      <td>-0.065768</td>
     </tr>
     <tr>
       <td>screen</td>
       <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.166509</td>
-      <td>-0.002786</td>
+      <td>0.169793</td>
+      <td>0.000000</td>
       <td>0.279291</td>
     </tr>
     <tr>
-      <td>price</td>
-      <td>iPhone 11 Pro is better than iPhone 12 Pro</td>
-      <td>0.188569</td>
-      <td>0.171415</td>
+      <td>battery</td>
+      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
+      <td>0.196551</td>
       <td>0.000000</td>
+      <td>0.089491</td>
     </tr>
     <tr>
-      <td>screen</td>
-      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
-      <td>0.204161</td>
-      <td>-0.002786</td>
-      <td>0.114063</td>
+      <td>battery</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.199011</td>
+      <td>0.000000</td>
+      <td>0.215750</td>
     </tr>
     <tr>
       <td>camera</td>
       <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.224732</td>
-      <td>0.055891</td>
-      <td>0.263486</td>
-    </tr>
-    <tr>
-      <td>battery</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.231427</td>
-      <td>0.000000</td>
-      <td>0.134308</td>
+      <td>0.239279</td>
+      <td>0.071262</td>
+      <td>0.268170</td>
     </tr>
     <tr>
       <td>camera</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.255786</td>
-      <td>0.055891</td>
-      <td>0.249189</td>
+      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
+      <td>0.278409</td>
+      <td>0.106653</td>
+      <td>0.300823</td>
     </tr>
     <tr>
       <td>stabilization</td>
       <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.270005</td>
+      <td>0.283062</td>
       <td>0.010825</td>
-      <td>0.052608</td>
+      <td>0.045959</td>
     </tr>
     <tr>
       <td>stabilization</td>
       <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.271215</td>
+      <td>0.284592</td>
       <td>0.010923</td>
-      <td>0.052608</td>
+      <td>0.045959</td>
     </tr>
   </tbody>
 </table>
