iframe forced refresh added

--- a/static/reviewlyzer/reviewlyzerPvalues.html
+++ b/static/reviewlyzer/reviewlyzerPvalues.html
@@ -11,81 +11,95 @@
   </thead>
   <tbody>
     <tr>
+      <td>battery</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.067479</td>
+      <td>-0.017355</td>
+      <td>0.270315</td>
+    </tr>
+    <tr>
       <td>screen</td>
       <td>Google Pixel 4A is better than iPhone 11 Pro</td>
-      <td>0.084748</td>
-      <td>0.000000</td>
-      <td>0.156244</td>
+      <td>0.130471</td>
+      <td>-0.002786</td>
+      <td>0.134283</td>
+    </tr>
+    <tr>
+      <td>battery</td>
+      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
+      <td>0.132742</td>
+      <td>-0.017355</td>
+      <td>0.113670</td>
     </tr>
     <tr>
       <td>price</td>
       <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.098785</td>
+      <td>0.141544</td>
       <td>0.000000</td>
-      <td>0.103999</td>
-    </tr>
-    <tr>
-      <td>camera</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.165324</td>
-      <td>0.071262</td>
-      <td>0.300823</td>
-    </tr>
-    <tr>
-      <td>stabilization</td>
-      <td>Google Pixel 5 is better than Google Pixel 4A</td>
-      <td>0.167629</td>
-      <td>0.045959</td>
-      <td>0.000000</td>
+      <td>0.078959</td>
     </tr>
     <tr>
       <td>screen</td>
       <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.169793</td>
-      <td>0.000000</td>
+      <td>0.166509</td>
+      <td>-0.002786</td>
       <td>0.279291</td>
     </tr>
     <tr>
-      <td>battery</td>
+      <td>camera</td>
       <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.196551</td>
+      <td>0.171293</td>
+      <td>0.055891</td>
+      <td>0.280573</td>
+    </tr>
+    <tr>
+      <td>price</td>
+      <td>iPhone 11 Pro is better than iPhone 12 Pro</td>
+      <td>0.184333</td>
+      <td>0.118871</td>
       <td>0.000000</td>
-      <td>0.089491</td>
+    </tr>
+    <tr>
+      <td>camera</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.224732</td>
+      <td>0.055891</td>
+      <td>0.263486</td>
+    </tr>
+    <tr>
+      <td>stabilization</td>
+      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
+      <td>0.237243</td>
+      <td>0.010923</td>
+      <td>0.111465</td>
+    </tr>
+    <tr>
+      <td>screen</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.237787</td>
+      <td>0.044597</td>
+      <td>0.279291</td>
+    </tr>
+    <tr>
+      <td>stabilization</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.271215</td>
+      <td>0.010923</td>
+      <td>0.052608</td>
     </tr>
     <tr>
       <td>battery</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.199011</td>
-      <td>0.000000</td>
-      <td>0.215750</td>
+      <td>Google Pixel 5 is better than Google Pixel 4A</td>
+      <td>0.286882</td>
+      <td>0.270315</td>
+      <td>0.113670</td>
     </tr>
     <tr>
-      <td>camera</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.239279</td>
-      <td>0.071262</td>
-      <td>0.268170</td>
-    </tr>
-    <tr>
-      <td>camera</td>
-      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
-      <td>0.278409</td>
-      <td>0.106653</td>
-      <td>0.300823</td>
-    </tr>
-    <tr>
-      <td>stabilization</td>
+      <td>battery</td>
       <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.283062</td>
-      <td>0.010825</td>
-      <td>0.045959</td>
-    </tr>
-    <tr>
-      <td>stabilization</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.284592</td>
-      <td>0.010923</td>
-      <td>0.045959</td>
+      <td>0.288121</td>
+      <td>0.065918</td>
+      <td>0.270315</td>
     </tr>
   </tbody>
 </table>
