--- a/static/reviewlyzer/reviewlyzerDf.html
+++ b/static/reviewlyzer/reviewlyzerDf.html
@@ -1,5 +1,12 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-<meta http-Equiv="Cache-Control" Content="no-cache" /> <meta http-Equiv="Pragma" Content="no-cache" /> <meta http-Equiv="Expires" Content="0" /> <table class="table">
+<head>
+<meta http-equiv="cache-control" content="max-age=0" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+<meta http-equiv="pragma" content="no-cache" />
+</head>
+<table class="table">
   <thead>
     <tr style="text-align: left;">
       <th></th>
@@ -19,49 +26,49 @@
       <th>0</th>
       <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/refurb-iphone-11-pro-gold-2019?wid=1144&hei=1144&fmt=jpeg&qlt=80&.v=1611101491000" width="200" ></td>
       <td>iPhone 11 Pro</td>
-      <td>0.076448</td>
-      <td>0.106653</td>
+      <td>0.065918</td>
+      <td>0.105969</td>
       <td>0.0</td>
-      <td>0.068908</td>
-      <td>0.0</td>
-      <td>0.010825</td>
-      <td>0.043806</td>
+      <td>0.118871</td>
+      <td>-0.002786</td>
+      <td>0.058866</td>
+      <td>0.057807</td>
     </tr>
     <tr>
       <th>1</th>
       <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-12-pro-family-hero?wid=940&hei=1112&fmt=jpeg&qlt=80&.v=1604021663000" width="200" ></td>
       <td>iPhone 12 Pro</td>
+      <td>-0.017355</td>
+      <td>0.055891</td>
       <td>0.0</td>
-      <td>0.071262</td>
       <td>0.0</td>
-      <td>0.0</td>
-      <td>0.122068</td>
+      <td>0.044597</td>
       <td>0.010923</td>
-      <td>0.034042</td>
+      <td>0.015676</td>
     </tr>
     <tr>
       <th>2</th>
-      <td><img src="https://lh3.googleusercontent.com/acfYFwP4OteHL-i2vr0IPcmiLlaqsWqGU7_0KPgHfDiNHUCPOmDSmeb42ps7V4ganqdF6sLI7tnzY1tCy3-X=w830" width="200" ></td>
+      <td><img src="https://m.media-amazon.com/images/I/81-fNmQqlLL._AC_SX522_.jpg" width="200" ></td>
       <td>Google Pixel 5</td>
-      <td>0.21575</td>
-      <td>0.26817</td>
+      <td>0.270315</td>
+      <td>0.263486</td>
       <td>0.0</td>
-      <td>0.103999</td>
+      <td>0.078959</td>
       <td>0.279291</td>
-      <td>0.045959</td>
-      <td>0.152195</td>
+      <td>0.052608</td>
+      <td>0.157443</td>
     </tr>
     <tr>
       <th>3</th>
-      <td><img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6422/6422517_sd.jpg" width="200" ></td>
+      <td><img src="https://m.media-amazon.com/images/I/615nnBCxt7S._AC_SX522_.jpg" width="200" ></td>
       <td>Google Pixel 4A</td>
-      <td>0.089491</td>
-      <td>0.300823</td>
+      <td>0.11367</td>
+      <td>0.280573</td>
       <td>0.010825</td>
-      <td>0.00555</td>
-      <td>0.156244</td>
-      <td>0.0</td>
-      <td>0.093822</td>
+      <td>0.076568</td>
+      <td>0.134283</td>
+      <td>0.111465</td>
+      <td>0.121231</td>
     </tr>
   </tbody>
 </table>
