minor bug fixing

--- a/static/reviewlyzer/reviewlyzerDf.html
+++ b/static/reviewlyzer/reviewlyzerDf.html
@@ -24,51 +24,51 @@
   <tbody>
     <tr>
       <th>0</th>
-      <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/refurb-iphone-11-pro-gold-2019?wid=1144&hei=1144&fmt=jpeg&qlt=80&.v=1611101491000" width="200" ></td>
+      <td><img src="https://www.apple.com/newsroom/images/product/iphone/standard/Apple_iPhone-11-Pro_Colors_091019_big.jpg.large.jpg" width="200" ></td>
       <td>iPhone 11 Pro</td>
       <td>0.065918</td>
-      <td>0.105969</td>
+      <td>0.139682</td>
       <td>0.0</td>
-      <td>0.118871</td>
+      <td>0.170986</td>
       <td>-0.002786</td>
-      <td>0.058866</td>
-      <td>0.057807</td>
+      <td>0.010825</td>
+      <td>0.064104</td>
     </tr>
     <tr>
       <th>1</th>
       <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-12-pro-family-hero?wid=940&hei=1112&fmt=jpeg&qlt=80&.v=1604021663000" width="200" ></td>
       <td>iPhone 12 Pro</td>
-      <td>-0.017355</td>
+      <td>0.0</td>
       <td>0.055891</td>
       <td>0.0</td>
       <td>0.0</td>
-      <td>0.044597</td>
+      <td>0.122068</td>
       <td>0.010923</td>
-      <td>0.015676</td>
+      <td>0.031480</td>
     </tr>
     <tr>
       <th>2</th>
       <td><img src="https://m.media-amazon.com/images/I/81-fNmQqlLL._AC_SX522_.jpg" width="200" ></td>
       <td>Google Pixel 5</td>
-      <td>0.270315</td>
-      <td>0.263486</td>
+      <td>0.223926</td>
+      <td>0.26817</td>
       <td>0.0</td>
-      <td>0.078959</td>
+      <td>0.103999</td>
       <td>0.279291</td>
-      <td>0.052608</td>
-      <td>0.157443</td>
+      <td>0.045959</td>
+      <td>0.153558</td>
     </tr>
     <tr>
       <th>3</th>
       <td><img src="https://m.media-amazon.com/images/I/615nnBCxt7S._AC_SX522_.jpg" width="200" ></td>
       <td>Google Pixel 4A</td>
       <td>0.11367</td>
-      <td>0.280573</td>
+      <td>0.249189</td>
       <td>0.010825</td>
-      <td>0.076568</td>
-      <td>0.134283</td>
-      <td>0.111465</td>
-      <td>0.121231</td>
+      <td>-0.003736</td>
+      <td>0.143225</td>
+      <td>0.070467</td>
+      <td>0.097274</td>
     </tr>
   </tbody>
 </table>
