minor bug fixing

--- a/static/reviewlyzer/reviewlyzerDf.html
+++ b/static/reviewlyzer/reviewlyzerDf.html
@@ -24,51 +24,51 @@
   <tbody>
     <tr>
       <th>0</th>
-      <td><img src="https://www.apple.com/newsroom/images/product/iphone/standard/Apple_iPhone-11-Pro_Colors_091019_big.jpg.large.jpg" width="200" ></td>
-      <td>iPhone 11 Pro</td>
-      <td>0.065918</td>
-      <td>0.139682</td>
+      <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/refurb-iphone-11-pro-max-space-gray-2019?wid=1144&hei=1144&fmt=jpeg&qlt=80&.v=1611101628000" width="200" ></td>
+      <td>iPhone 11 Pro Max</td>
+      <td>0.257962</td>
+      <td>0.397193</td>
       <td>0.0</td>
-      <td>0.170986</td>
-      <td>-0.002786</td>
-      <td>0.010825</td>
-      <td>0.064104</td>
+      <td>0.058553</td>
+      <td>0.077732</td>
+      <td>0.008189</td>
+      <td>0.133271</td>
     </tr>
     <tr>
       <th>1</th>
       <td><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-12-pro-family-hero?wid=940&hei=1112&fmt=jpeg&qlt=80&.v=1604021663000" width="200" ></td>
       <td>iPhone 12 Pro</td>
+      <td>-0.01648</td>
+      <td>0.051301</td>
       <td>0.0</td>
-      <td>0.055891</td>
       <td>0.0</td>
-      <td>0.0</td>
-      <td>0.122068</td>
-      <td>0.010923</td>
-      <td>0.031480</td>
+      <td>0.041521</td>
+      <td>0.009459</td>
+      <td>0.014300</td>
     </tr>
     <tr>
       <th>2</th>
       <td><img src="https://m.media-amazon.com/images/I/81-fNmQqlLL._AC_SX522_.jpg" width="200" ></td>
       <td>Google Pixel 5</td>
-      <td>0.223926</td>
-      <td>0.26817</td>
+      <td>0.25868</td>
+      <td>0.24742</td>
       <td>0.0</td>
-      <td>0.103999</td>
-      <td>0.279291</td>
-      <td>0.045959</td>
-      <td>0.153558</td>
+      <td>0.074178</td>
+      <td>0.271302</td>
+      <td>0.051255</td>
+      <td>0.150473</td>
     </tr>
     <tr>
       <th>3</th>
       <td><img src="https://m.media-amazon.com/images/I/615nnBCxt7S._AC_SX522_.jpg" width="200" ></td>
       <td>Google Pixel 4A</td>
-      <td>0.11367</td>
-      <td>0.249189</td>
+      <td>0.087652</td>
+      <td>0.309124</td>
       <td>0.010825</td>
-      <td>-0.003736</td>
-      <td>0.143225</td>
-      <td>0.070467</td>
-      <td>0.097274</td>
+      <td>0.066113</td>
+      <td>0.137525</td>
+      <td>0.038404</td>
+      <td>0.108274</td>
     </tr>
   </tbody>
 </table>
