--- a/static/reviewlyzer/reviewlyzerPvalues.html
+++ b/static/reviewlyzer/reviewlyzerPvalues.html
@@ -11,81 +11,102 @@
   </thead>
   <tbody>
     <tr>
-      <td>price</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.098785</td>
-      <td>0.000000</td>
-      <td>0.103999</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>Google Pixel 4A is better than iPhone 11 Pro</td>
-      <td>0.108059</td>
-      <td>-0.002786</td>
-      <td>0.143225</td>
-    </tr>
-    <tr>
-      <td>screen</td>
-      <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.166509</td>
-      <td>-0.002786</td>
-      <td>0.279291</td>
-    </tr>
-    <tr>
       <td>battery</td>
-      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.176493</td>
-      <td>0.000000</td>
-      <td>0.113670</td>
+      <td>iPhone 11 Pro Max is better than iPhone 12 Pro</td>
+      <td>0.055877</td>
+      <td>0.257962</td>
+      <td>-0.016480</td>
     </tr>
     <tr>
       <td>battery</td>
       <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.188436</td>
-      <td>0.000000</td>
-      <td>0.223926</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>iPhone 11 Pro is better than iPhone 12 Pro</td>
-      <td>0.188895</td>
-      <td>0.170986</td>
-      <td>0.000000</td>
-    </tr>
-    <tr>
-      <td>camera</td>
-      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.210006</td>
-      <td>0.055891</td>
-      <td>0.268170</td>
-    </tr>
-    <tr>
-      <td>price</td>
-      <td>iPhone 11 Pro is better than Google Pixel 4A</td>
-      <td>0.244018</td>
-      <td>0.170986</td>
-      <td>-0.003736</td>
+      <td>0.068498</td>
+      <td>-0.016480</td>
+      <td>0.258680</td>
     </tr>
     <tr>
       <td>camera</td>
       <td>Google Pixel 4A is better than iPhone 12 Pro</td>
-      <td>0.255786</td>
-      <td>0.055891</td>
-      <td>0.249189</td>
+      <td>0.090488</td>
+      <td>0.051301</td>
+      <td>0.309124</td>
+    </tr>
+    <tr>
+      <td>camera</td>
+      <td>iPhone 11 Pro Max is better than iPhone 12 Pro</td>
+      <td>0.117921</td>
+      <td>0.397193</td>
+      <td>0.051301</td>
+    </tr>
+    <tr>
+      <td>battery</td>
+      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
+      <td>0.131570</td>
+      <td>-0.016480</td>
+      <td>0.087652</td>
+    </tr>
+    <tr>
+      <td>price</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.143529</td>
+      <td>0.000000</td>
+      <td>0.074178</td>
+    </tr>
+    <tr>
+      <td>battery</td>
+      <td>iPhone 11 Pro Max is better than Google Pixel 4A</td>
+      <td>0.195112</td>
+      <td>0.257962</td>
+      <td>0.087652</td>
+    </tr>
+    <tr>
+      <td>price</td>
+      <td>iPhone 11 Pro Max is better than iPhone 12 Pro</td>
+      <td>0.213367</td>
+      <td>0.058553</td>
+      <td>0.000000</td>
+    </tr>
+    <tr>
+      <td>battery</td>
+      <td>Google Pixel 5 is better than Google Pixel 4A</td>
+      <td>0.219196</td>
+      <td>0.258680</td>
+      <td>0.087652</td>
+    </tr>
+    <tr>
+      <td>camera</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.227414</td>
+      <td>0.051301</td>
+      <td>0.247420</td>
+    </tr>
+    <tr>
+      <td>screen</td>
+      <td>Google Pixel 5 is better than iPhone 12 Pro</td>
+      <td>0.235571</td>
+      <td>0.041521</td>
+      <td>0.271302</td>
     </tr>
     <tr>
       <td>stabilization</td>
-      <td>Google Pixel 5 is better than iPhone 11 Pro</td>
-      <td>0.283062</td>
-      <td>0.010825</td>
-      <td>0.045959</td>
+      <td>Google Pixel 5 is better than iPhone 11 Pro Max</td>
+      <td>0.247491</td>
+      <td>0.008189</td>
+      <td>0.051255</td>
     </tr>
     <tr>
       <td>stabilization</td>
       <td>Google Pixel 5 is better than iPhone 12 Pro</td>
-      <td>0.284592</td>
-      <td>0.010923</td>
-      <td>0.045959</td>
+      <td>0.261853</td>
+      <td>0.009459</td>
+      <td>0.051255</td>
+    </tr>
+    <tr>
+      <td>screen</td>
+      <td>Google Pixel 4A is better than iPhone 12 Pro</td>
+      <td>0.298635</td>
+      <td>0.041521</td>
+      <td>0.137525</td>
     </tr>
   </tbody>
 </table>
